# stocktrader

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LESSONS.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
scripts/: backtest.py
src/stocktrader/: config.py
src/stocktrader/agent/: trading_agent.py
src/stocktrader/data/: models.py  state_manager.py
src/stocktrader/trading/: broker_interface.py  mock_broker.py  models.py  position_manager.py  risk_guard.py
tests/unit/data/: test_state_manager.py
tests/unit/trading/: test_mock_broker.py  test_position_manager.py  test_risk_guard.py
