[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stocktrader"
version = "0.1.0"
description = "Sentiment-driven algorithmic paper trading system"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "structlog>=24.0",
    # Data
    "yfinance>=0.2",
    "finnhub-python>=2.4",
]

[project.optional-dependencies]
nlp = [
    "transformers>=4.40",
    "torch>=2.0",
]
agent = [
    "anthropic>=0.28",
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "freezegun>=1.4",
    "hypothesis>=6.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
    # Type stubs
    "types-freezegun",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "freezegun>=1.4",
    "hypothesis>=6.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "types-freezegun",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stocktrader"]

# --- ruff ---
[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["stocktrader"]

# --- mypy ---
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["yfinance.*", "finnhub.*", "transformers.*", "torch.*"]
ignore_missing_imports = true

# --- pytest ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/stocktrader --cov-report=term-missing --cov-fail-under=0"

[tool.coverage.run]
source = ["src/stocktrader"]
omit = ["*/alpaca_broker.py"]  # Phase 4, excluded until implemented
